--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     },
     "dependencies": {
         "body-parser": "^1.15.2",
+        "dependencies": "0.0.1",
         "dotenv": "^8.2.0",
-        "express": "^4.12.4"
+        "express": "^4.12.4",
+        "mongodb": "3.6.0",
+        "mongoose": "5.4.0"
     },
     "repository": {
         "type": "git",
